--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-terser": "^1.4.0"
+    "gulp-sass": "^4.1.0",
+    "gulp-terser": "^1.4.0",
+    "node-sass": "^4.14.1"
   }
 }
